--- a/SherpaDesk/Activity.xaml
+++ b/SherpaDesk/Activity.xaml
@@ -19,9 +19,11 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <TextBlock x:Name="pageTitle" 
-                   VerticalAlignment="Top" Margin="40,30,20,20" FontSize="40" Foreground="#86abb6"
+                   Margin="40,30,20,20" 
                    Text="SherpaDesk Activity" 
-                   FontWeight="Normal" Grid.Column="0" />
+                   Grid.Column="0"
+                   Grid.Row="0"
+                   Style="{StaticResource PageHeaderTextStyle}" />
         <ListView x:Name="ActivityList" 
                     Visibility="Collapsed" 
                     VerticalAlignment="Top" 
