--- a/SherpaDesk/Activity.xaml
+++ b/SherpaDesk/Activity.xaml
@@ -11,8 +11,65 @@
     mc:Ignorable="d" 
     Width="500"
     Loaded="pageRoot_Loaded">
-    <Page.Resources>
-    </Page.Resources>
+    <common:LayoutAwarePage.Resources>
+        <Style x:Key="ActivityListStyle" TargetType="ListView">
+            <Setter Property="IsTabStop" Value="False"/>
+            <Setter Property="TabNavigation" Value="Once"/>
+            <Setter Property="IsSwipeEnabled" Value="True"/>
+            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
+            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
+            <Setter Property="ScrollViewer.HorizontalScrollMode" Value="Disabled"/>
+            <Setter Property="ScrollViewer.IsHorizontalRailEnabled" Value="False"/>
+            <Setter Property="ScrollViewer.VerticalScrollMode" Value="Enabled"/>
+            <Setter Property="ScrollViewer.IsVerticalRailEnabled" Value="False"/>
+            <Setter Property="ScrollViewer.ZoomMode" Value="Disabled"/>
+            <Setter Property="ScrollViewer.IsDeferredScrollingEnabled" Value="False"/>
+            <Setter Property="ScrollViewer.BringIntoViewOnFocusChange" Value="True"/>
+            <Setter Property="ItemContainerTransitions">
+                <Setter.Value>
+                    <TransitionCollection>
+                        <AddDeleteThemeTransition/>
+                        <ContentThemeTransition/>
+                        <ReorderThemeTransition/>
+                        <EntranceThemeTransition IsStaggeringEnabled="False"/>
+                    </TransitionCollection>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="ItemsPanel">
+                <Setter.Value>
+                    <ItemsPanelTemplate>
+                        <ItemsStackPanel Orientation="Vertical"/>
+                    </ItemsPanelTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ListView">
+                        <Border BorderBrush="{TemplateBinding BorderBrush}" 
+                                BorderThickness="1" 
+                                Background="{TemplateBinding Background}">
+                            <ScrollViewer x:Name="ScrollViewer" 
+                                          AutomationProperties.AccessibilityView="Raw" 
+                                          BringIntoViewOnFocusChange="{TemplateBinding ScrollViewer.BringIntoViewOnFocusChange}" 
+                                          HorizontalScrollMode="Disabled" 
+                                          HorizontalScrollBarVisibility="Disabled" 
+                                          VerticalScrollBarVisibility="Auto" 
+                                          VerticalScrollMode="Auto" 
+                                          IsHorizontalRailEnabled="{TemplateBinding ScrollViewer.IsHorizontalRailEnabled}" 
+                                          IsHorizontalScrollChainingEnabled="{TemplateBinding ScrollViewer.IsHorizontalScrollChainingEnabled}" 
+                                          IsVerticalScrollChainingEnabled="{TemplateBinding ScrollViewer.IsVerticalScrollChainingEnabled}" 
+                                          IsVerticalRailEnabled="{TemplateBinding ScrollViewer.IsVerticalRailEnabled}" 
+                                          IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}" 
+                                          TabNavigation="{TemplateBinding TabNavigation}" 
+                                          ZoomMode="{TemplateBinding ScrollViewer.ZoomMode}">
+                                <ItemsPresenter FooterTransitions="{TemplateBinding FooterTransitions}" FooterTemplate="{TemplateBinding FooterTemplate}" Footer="{TemplateBinding Footer}" HeaderTemplate="{TemplateBinding HeaderTemplate}" Header="{TemplateBinding Header}" HeaderTransitions="{TemplateBinding HeaderTransitions}" Padding="{TemplateBinding Padding}"/>
+                            </ScrollViewer>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </common:LayoutAwarePage.Resources>
     <Grid Style="{StaticResource LayoutRootStyle}" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -27,13 +84,21 @@
         <ListView x:Name="ActivityList" 
                     Visibility="Collapsed" 
                     VerticalAlignment="Top" 
-                    SelectionMode="None" 
-                    Background="Transparent"
-                    Margin="0,0,20,0" 
+                    SelectionMode="None"
+                    Background="White"
+                    Margin="0,14,20,0" 
                     Grid.Column="0" 
-                    Grid.Row="1" 
-                    ScrollViewer.VerticalScrollBarVisibility="Visible" 
-                    ScrollViewer.VerticalScrollMode="Auto">
+                    Grid.Row="1">
+            <!--Style="{StaticResource ListViewScrollViewerStyle}">-->
+            <ListView.Resources>
+                <Style TargetType="ScrollBar">
+                    <Setter Property="Background" Value="White" />
+                    <Setter Property="Foreground" Value="#E0E0E0" />
+                </Style>
+            </ListView.Resources>
+            <ListView.Style>
+                <StaticResource ResourceKey="ActivityListStyle"/>
+            </ListView.Style>
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid Width="450">
@@ -47,13 +112,14 @@
                             <RowDefinition />
                             <RowDefinition />
                         </Grid.RowDefinitions>
-                        
-                        <Image VerticalAlignment="Stretch"  HorizontalAlignment="Left"
+
+                        <Image VerticalAlignment="Stretch"  
+                               HorizontalAlignment="Left"
                                Source="Assets/Images/face55x55.png"
                                Grid.Column="0"
                                Margin="0,0,10,0"
                                Grid.Row="0" />
-                        
+
                         <TextBlock Text="{Binding UserName}" 
                                    FontSize="20" 
                                    Foreground="#FF8EB0BA" 
@@ -77,7 +143,7 @@
                                    VerticalAlignment="Bottom"
                                    Grid.Row="0" 
                                    Grid.Column="2" />
-                        
+
                         <TextBlock Text="{Binding Note}" 
                                    Width="480" 
                                    FontSize="14" 
@@ -87,7 +153,7 @@
                                    Grid.Column="0"
                                    Grid.ColumnSpan="3"/>
 
-                        <Line Stroke="Gray" 
+                        <Line Stroke="#FEFEFE" 
                               X1="0" 
                               Y1="0" 
                               X2="450" 
