--- a/SherpaDesk/Activity.xaml
+++ b/SherpaDesk/Activity.xaml
@@ -123,15 +123,14 @@
                                    Grid.Column="0"
                                    Grid.ColumnSpan="3"/>
 
-                        <Line Stroke="#FEFEFE" 
-                              X1="0" 
-                              Y1="0" 
-                              X2="450" 
-                              Y2="0" 
-                              Margin="0,0,0,0"
-                              Grid.Row="2" 
-                              Grid.Column="0" 
-                              Grid.ColumnSpan="3" />
+
+                        <Image VerticalAlignment="Stretch"  
+                               HorizontalAlignment="Center"
+                               Source="Assets/Images/activity-line.png"
+                               Grid.Column="0"
+                               Margin="0,10,0,10"
+                               Grid.ColumnSpan="3"
+                               Grid.Row="2" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
